Store Front/CorePackage/main/default/objects/Purchase__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>