Store Front/CorePackage/main/default/objects/Purchase__c/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <label>Credit Card</label>
    <length>16</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>