Store Front/CorePackage/main/default/objects/Purchase__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>